--- a/ClubRaqueta/ClubRaqueta/ClubRaqueta.csproj
+++ b/ClubRaqueta/ClubRaqueta/ClubRaqueta.csproj
@@ -33,8 +33,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -75,8 +82,32 @@
     <Compile Include="FormSocios.Designer.cs">
       <DependentUpon>FormSocios.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelClubRaqueta.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelClubRaqueta.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ModelClubRaqueta.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelClubRaqueta.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ModelClubRaqueta.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelClubRaqueta.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="pistas.cs">
+      <DependentUpon>ModelClubRaqueta.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="reservas.cs">
+      <DependentUpon>ModelClubRaqueta.tt</DependentUpon>
+    </Compile>
+    <Compile Include="socios.cs">
+      <DependentUpon>ModelClubRaqueta.tt</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -109,6 +140,14 @@
     <None Include="dsClubRaqueta.xss">
       <DependentUpon>dsClubRaqueta.xsd</DependentUpon>
     </None>
+    <EntityDeploy Include="ModelClubRaqueta.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ModelClubRaqueta.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="ModelClubRaqueta.edmx.diagram">
+      <DependentUpon>ModelClubRaqueta.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -121,6 +160,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ModelClubRaqueta.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ModelClubRaqueta.Context.cs</LastGenOutput>
+      <DependentUpon>ModelClubRaqueta.edmx</DependentUpon>
+    </Content>
+    <Content Include="ModelClubRaqueta.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ModelClubRaqueta.edmx</DependentUpon>
+      <LastGenOutput>ModelClubRaqueta.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
